[gd_scene format=3 uid="uid://dnxd7nhjj8lte"]

[ext_resource type="Script" uid="uid://cp0fxtf7la6b" path="res://script/scens/main.gd" id="1"]
[ext_resource type="FontFile" uid="uid://d4df0j0pjrrp8" path="res://res/font/font2.ttf" id="2"]
[ext_resource type="FontFile" uid="uid://bsev51k2h27qx" path="res://res/font/font1.ttf" id="3"]
[ext_resource type="Texture2D" uid="uid://bphe0xixmxebf" path="res://res/icons/ext512.png" id="4_x33ci"]
[ext_resource type="Script" uid="uid://cohvv16kaj2ws" path="res://script/scens/scen_2.gd" id="5"]
[ext_resource type="Script" uid="uid://bq2eve14q2yry" path="res://script/scens/scen_3.gd" id="6"]
[ext_resource type="Script" uid="uid://rc6xujlpkqqw" path="res://script/scens/del.gd" id="7"]
[ext_resource type="Script" uid="uid://btbxrevmxbdmq" path="res://script/load/load.gd" id="8"]

[node name="Main" type="CanvasLayer" unique_id=669145523]
script = ExtResource("1")

[node name="Scen1" type="Control" parent="." unique_id=555728920]
layout_mode = 3
anchors_preset = 0
offset_left = -9.135
offset_top = 31.765
offset_right = 30.865
offset_bottom = 71.76497

[node name="VBoxContainer" type="VBoxContainer" parent="Scen1" unique_id=844769153]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 98.785
offset_top = 225.64
offset_right = 364.7587
offset_bottom = 323.64032
grow_horizontal = 2
scale = Vector2(1.9, 1.9)

[node name="Start" type="Button" parent="Scen1/VBoxContainer" unique_id=1618613237]
layout_mode = 2
text = "Старт"

[node name="Quit" type="Button" parent="Scen1/VBoxContainer" unique_id=181684279]
visible = false
layout_mode = 2
text = "Выключить"

[node name="Restart" type="Button" parent="Scen1/VBoxContainer" unique_id=958534262]
layout_mode = 2
text = "Перезапуск"

[node name="Status" type="VBoxContainer" parent="Scen1" unique_id=1447106994]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 288.835
offset_top = 151.83
offset_right = 336.835
offset_bottom = 173.83
grow_horizontal = 2
scale = Vector2(2.5, 2.5)

[node name="Off" type="Label" parent="Scen1/Status" unique_id=1367247488]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2")
text = "Выкл"

[node name="On" type="Label" parent="Scen1/Status" unique_id=1624981222]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2")
text = "Вкл"

[node name="Check" type="VBoxContainer" parent="Scen1" unique_id=1443560696]
layout_mode = 0
offset_left = 119.135
offset_top = 409.23502
offset_right = 624.13495
offset_bottom = 504.2339

[node name="YouTube" type="Button" parent="Scen1/Check" unique_id=2123488312]
layout_mode = 2
theme_override_font_sizes/font_size = 22

[node name="Discord" type="Button" parent="Scen1/Check" unique_id=2000858467]
layout_mode = 2
theme_override_font_sizes/font_size = 22

[node name="Telegram" type="Button" parent="Scen1/Check" unique_id=303171600]
layout_mode = 2
theme_override_font_sizes/font_size = 22

[node name="Updeate" type="Button" parent="Scen1/Check" unique_id=1800209947]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Обновить"

[node name="Logo" type="Label" parent="Scen1" unique_id=1892495408]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 148.135
offset_top = 28.235
offset_right = 640.135
offset_bottom = 165.235
grow_horizontal = 2
scale = Vector2(0.82, 0.82)
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 136
text = "Tr   yn Dpi"

[node name="Label" type="Label" parent="Scen1" unique_id=199990480]
layout_mode = 0
offset_left = 119.135
offset_top = 360.235
offset_right = 621.1349
offset_bottom = 403.235
theme_override_font_sizes/font_size = 22
text = "Статус приложений"
horizontal_alignment = 1

[node name="LogoImg" type="TextureButton" parent="Scen1" unique_id=866768788]
layout_mode = 0
offset_left = 242.13498
offset_top = 32.235
offset_right = 754.135
offset_bottom = 544.235
scale = Vector2(0.215, 0.215)
texture_normal = ExtResource("4_x33ci")

[node name="Scen2" type="Control" parent="." unique_id=1760535548]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -15.0
offset_top = 36.63
offset_right = -15.0
offset_bottom = 833.63
script = ExtResource("5")

[node name="VBoxContainer" type="VBoxContainer" parent="Scen2" unique_id=592964198]
layout_mode = 0
offset_left = 58.0
offset_top = 23.0
offset_right = 727.4737
offset_bottom = 658.0
scale = Vector2(0.95, 0.95)

[node name="Text1" type="Label" parent="Scen2/VBoxContainer" unique_id=1798596075]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Автоматически запускать обход при в ходе в приложение"

[node name="Auto_on" type="Button" parent="Scen2/VBoxContainer" unique_id=383562392]
layout_mode = 2
tooltip_text = "Когда запускается программа 
сразу же запускается обход"
theme_override_fonts/font = ExtResource("2")
text = "Выкл"

[node name="Auto_off" type="Button" parent="Scen2/VBoxContainer" unique_id=1392311930]
visible = false
layout_mode = 2
tooltip_text = "Когда запускается программа 
сразу же запускается обход"
theme_override_fonts/font = ExtResource("2")
text = "Вкл"

[node name="Text2" type="Label" parent="Scen2/VBoxContainer" unique_id=392434813]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "При запуске сворачивать программу в трей"

[node name="Windows_on" type="Button" parent="Scen2/VBoxContainer" unique_id=2087028979]
layout_mode = 2
tooltip_text = "Когда запускается программа она сворачивается в 
третьей откуда вы можете ей управлять ей"
theme_override_fonts/font = ExtResource("2")
text = "Выкл"

[node name="Windows_off" type="Button" parent="Scen2/VBoxContainer" unique_id=1202408029]
visible = false
layout_mode = 2
tooltip_text = "Когда запускается программа она сворачивается в 
третьей откуда вы можете ей управлять ей"
theme_override_fonts/font = ExtResource("2")
text = "Вкл"

[node name="Text3" type="Label" parent="Scen2/VBoxContainer" unique_id=781929205]
layout_mode = 2
text = "Открывать обход при запуске системы"

[node name="Auto_open_on" type="Button" parent="Scen2/VBoxContainer" unique_id=575437555]
layout_mode = 2
tooltip_text = "Когда запускается Windows сразу же 
запускается обход"
text = "Выкл"

[node name="Auto_open_off" type="Button" parent="Scen2/VBoxContainer" unique_id=672058410]
visible = false
layout_mode = 2
tooltip_text = "Когда запускается Windows сразу же 
запускается обход"
text = "Вкл"

[node name="Text4" type="Label" parent="Scen2/VBoxContainer" unique_id=92699734]
layout_mode = 2
text = "Сворачивать приложение в треей при нажатии на крестик"

[node name="Trey_on" type="Button" parent="Scen2/VBoxContainer" unique_id=1862068848]
layout_mode = 2
tooltip_text = "Вкл/Выкл сворачивание в треей при нажатии на крестик"
text = "Вкл"

[node name="Trey_off" type="Button" parent="Scen2/VBoxContainer" unique_id=329076603]
visible = false
layout_mode = 2
tooltip_text = "Вкл/Выкл сворачивание в треей при нажатии на крестик"
text = "Выкл"

[node name="OptionButton" type="OptionButton" parent="Scen2/VBoxContainer" unique_id=1015515091]
visible = false
layout_mode = 2
selected = 1
item_count = 3
popup/item_0/text = "1440 на 1360"
popup/item_0/id = 0
popup/item_1/text = "720 на 680"
popup/item_1/id = 1
popup/item_2/text = "360 на 340"
popup/item_2/id = 2

[node name="Label" type="Label" parent="Scen2/VBoxContainer" unique_id=29915071]
layout_mode = 2
text = "Функции разработчика"

[node name="del" type="Button" parent="Scen2/VBoxContainer" unique_id=1838988368]
layout_mode = 2
tooltip_text = "Удаляет TrynDPI с выбранным способом удалением"
text = "Удалить TrynDPI"

[node name="Corn" type="Button" parent="Scen2/VBoxContainer" unique_id=2042733915]
layout_mode = 2
text = "Открыть корневую папку"

[node name="Full_settings" type="Button" parent="Scen2/VBoxContainer" unique_id=324645407]
layout_mode = 2
tooltip_text = "Открывает bat файл с которого можно более лучше настроить TrynDPi"
text = "Более детальные настройки"

[node name="Lists" type="Button" parent="Scen2/VBoxContainer" unique_id=771445599]
layout_mode = 2
tooltip_text = "Открывает txt файл со всеми сайтами которыми будет обходить TrynDPI"
text = "Открыть листы"

[node name="Logs" type="Button" parent="Scen2/VBoxContainer" unique_id=1907748998]
layout_mode = 2
text = "Отркыть логи"

[node name="Bat" type="Button" parent="Scen2/VBoxContainer" unique_id=1896318409]
layout_mode = 2
text = "Открыть AppData"

[node name="Scen3" type="Control" parent="." unique_id=1837318047]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -52.745
offset_right = -12.744999
offset_bottom = 40.0
scale = Vector2(1.185, 1.185)
script = ExtResource("6")

[node name="VBoxContainer" type="VBoxContainer" parent="Scen3" unique_id=795565705]
layout_mode = 0
offset_left = 193.87766
offset_top = 271.72998
offset_right = 445.87766
offset_bottom = 369.72998
scale = Vector2(1.28, 1.28)

[node name="Button" type="Button" parent="Scen3/VBoxContainer" unique_id=765577376]
layout_mode = 2
text = "Тест на 10mb"

[node name="Button2" type="Button" parent="Scen3/VBoxContainer" unique_id=1956559124]
layout_mode = 2
text = "Тест на 100mb"

[node name="VBoxContainer2" type="VBoxContainer" parent="Scen3" unique_id=796259006]
layout_mode = 0
offset_left = 109.489456
offset_top = 192.40508
offset_right = 590.50214
offset_bottom = 270.4051
tooltip_text = "*Данная информация приблизительна и не является 100% точной"

[node name="Label" type="Label" parent="Scen3/VBoxContainer2" unique_id=1578597832]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Нажмите на кнопку для проверки"

[node name="ProgressBar" type="ProgressBar" parent="Scen3/VBoxContainer2" unique_id=1810313709]
layout_mode = 2

[node name="Del" type="Control" parent="." unique_id=66849279]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 118.92
offset_top = 41.465
offset_right = 158.91992
offset_bottom = 81.465
script = ExtResource("7")

[node name="OptionButton" type="OptionButton" parent="Del" unique_id=1210735772]
layout_mode = 0
offset_left = 58.0
offset_top = 232.0
offset_right = 437.0
offset_bottom = 262.0
item_count = 2
popup/item_0/text = "Обычное"
popup/item_0/id = 0
popup/item_1/text = "Полное (удаление всех настроек)"
popup/item_1/id = 1

[node name="Label" type="Label" parent="Del" unique_id=230453959]
layout_mode = 0
offset_left = 163.0
offset_top = 206.0
offset_right = 338.0
offset_bottom = 228.0
text = "Способ удаления"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Del" unique_id=148490756]
title = "Подтверждение"
ok_button_text = "Да"
dialog_text = "Вы уверены?"
cancel_button_text = "Назад"

[node name="Load" type="Node" parent="." unique_id=575976144]
script = ExtResource("8")

[node name="L" type="ColorRect" parent="." unique_id=1442213650]
offset_left = -4.0
offset_right = 769.0
offset_bottom = 33.0
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="Settings" type="Button" parent="." unique_id=368408666]
offset_left = 221.0
offset_right = 517.0
offset_bottom = 33.0
theme_override_colors/font_hover_color = Color(0.40392157, 0.40392157, 0.40392157, 1)
text = "Настройки"
flat = true

[node name="Status" type="Button" parent="." unique_id=1543814129]
offset_left = 0.088858485
offset_right = 222.01465
offset_bottom = 32.999996
rotation = -6.28319
theme_override_colors/font_hover_color = Color(0.40392157, 0.40392157, 0.40392157, 1)
text = "Статус"
flat = true

[node name="SpeedTest" type="Button" parent="." unique_id=821320343]
offset_left = 518.0
offset_right = 721.0
offset_bottom = 33.0
theme_override_colors/font_hover_color = Color(0.40392157, 0.40392157, 0.40392157, 1)
text = "Сеть"
flat = true

[node name="Vers" type="LinkButton" parent="." unique_id=1686708760]
offset_left = 12.0
offset_top = 652.0
offset_right = 247.0
offset_bottom = 692.0
uri = "https://github.com/Tryn996/TrynDPI/releases/latest"

[connection signal="pressed" from="Scen3/VBoxContainer/Button" to="Scen3" method="_on_button_pressed"]
[connection signal="pressed" from="Scen3/VBoxContainer/Button2" to="Scen3" method="_on_button_2_pressed"]
[connection signal="item_selected" from="Del/OptionButton" to="Del" method="_on_option_button_item_selected"]
[connection signal="canceled" from="Del/ConfirmationDialog" to="Del" method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="Del/ConfirmationDialog" to="Del" method="_on_confirmation_dialog_confirmed"]
